--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -128,6 +128,7 @@
         <!-- REACT: target for dynamic HTML Components -->
         <noscript>You need to enable JavaScript to run this app.</noscript>
 
+        <!-- the UI element used to display a User Data Entry Forms -->
         <div id="root"></div>
 
         <!-- TEMPLATE:  This HTML file is a template.
